Adds regex validation forms and updates button styling
Introduces new HTML forms for validating passwords, emails, and usernames using regex. Adds corresponding JavaScript functions for client-side validation. Includes a reference regex list for validation patterns.

Also updates the button in the existing file to include explicit height and width styling. Renames a text file for better clarity.

--- a/mouseover.html
+++ b/mouseover.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <button id="btn">ON</button>
+    <button id="btn" style="height: 5rem; width: 2.5rem;">ON</button>
 
     <script>
         const button = document.getElementById("btn");       
