Refactors HTML structure and enhances CSS for consistency
Replaces generic "card" classes with "product-card" for improved
semantic clarity and updates associated text styles. Adds
vendor-prefixed CSS properties for better cross-browser
compatibility. Removes an outdated HTML file to declutter the
project.

--- a/testportfolio/MyfinalPortfolio.html
+++ b/testportfolio/MyfinalPortfolio.html
@@ -287,14 +287,28 @@
                 <div class="timeline-dot py-1"><i class='bx bxl-bootstrap bx-sm' undefined></i></div>
                 <div class="timeline-content ps-3">
                     <h5>April/29/2025</h5>
-                    <p>created template similar to nice Bootstrapmade</p>
+                    <p>created template similar to Nice Admin Bootstrapmade</p>
                 </div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-dot py-1"><i class='bx bxl-bootstrap bx-sm' undefined></i></div>
                 <div class="timeline-content ps-3">
                     <h5>may/18/2025</h5>
-                    <p>Built this portfolio using Bootstrap</p>
+                    <p>Built this portfolio using HTML, CSS,Bootstrap</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot py-2"><i class='bx bxl-javascript'></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>June/01/2025</h5>
+                    <p>Started Learning JavaScript</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot py-2"><i class='bx bx-calculator'></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>June/08/2025</h5>
+                    <p>Created first Calculator</p>
                 </div>
             </div>
         </div>
