--- a/testportfolio/FstoreTemplate.html
+++ b/testportfolio/FstoreTemplate.html
@@ -683,22 +683,22 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="card">
-                                <div class="card-body">
+                            <div class="product-card">
+                                <div class="product">
                                      <img src="purse.webp" alt="purse" width="100%" height="100%">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    <h5 class="product-title">Special title treatment</h5>
+                                    <p class="product-text">With supporting text below as a natural lead-in to additional
                                         content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="card">
-                                <div class="card-body">
+                            <div class="product-card">
+                                <div class="product-body">
                                       <img src="chair.webp" alt="chair" width="100%" height="100%">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    <h5 class="product-title">Special title treatment</h5>
+                                    <p class="product-text">With supporting text below as a natural lead-in to additional
                                         content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -707,22 +707,22 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="card">
-                                <div class="card-body">
+                            <div class="product-card">
+                                <div class="product-body">
                                       <img src="sunglases.webp" alt="sunglases" width="100%" height="100%">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    <h5 class="product-title">Special title treatment</h5>
+                                    <p class="product-text">With supporting text below as a natural lead-in to additional
                                         content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="card">
-                                <div class="card-body">
+                            <div class="product-card">
+                                <div class="product-body">
                                       <img src="sweatshirt -4.webp" alt="shirt" width="100%" height="100%">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    <h5 class="product-title">Special title treatment</h5>
+                                    <p class="product-text">With supporting text below as a natural lead-in to additional
                                         content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -737,22 +737,22 @@
 
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="card">
-                                <div class="card-body">
+                            <div class="product-card">
+                                <div class="product-body">
                                       <img src="product-5-variant.webp" alt="heals" width="100%" height="100%">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to
+                                    <h5 class="product-title">Special title treatment</h5>
+                                    <p class="product-text">With supporting text below as a natural lead-in to
                                         additional content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="card">
-                                <div class="card-body">
+                            <div class="product-card">
+                                <div class="product-body">
                                       <img src="denimjecket-7.webp" alt="denim" width="100%" height="100%">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to
+                                    <h5 class="product-title">Special title treatment</h5>
+                                    <p class="product-text">With supporting text below as a natural lead-in to
                                         additional content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -761,10 +761,10 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="card">
-                                <div class="card-body">
+                            <div class="product-card">
+                                <div class="product-body">
                                       <img src="backpack.webp" alt="backpack" width="100%" height="100%">
-                                    <h5 class="card-title">Special title treatment</h5>
+                                    <h5 class="product-title">Special title treatment</h5>
                                     <p class="card-text">With supporting text below as a natural lead-in to
                                         additional content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -776,7 +776,7 @@
                                 <div class="product-body">
                                       <img src="shoe.webp" alt="shoe" width="100%" height="100%">
                                     <h5 class="product-title">Special title treatment</h5>
-                                    <p class="product">With supporting text below as a natural lead-in to
+                                    <p class="product-text">With supporting text below as a natural lead-in to
                                         additional content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
