--- a/testportfolio/FstoreTemplate.html
+++ b/testportfolio/FstoreTemplate.html
@@ -18,6 +18,7 @@
         /* 2june/00:20 */
         /* 17jun/3:50 */
         /* 18jun/ */
+        /* 19/06..submenu */
     </style>
 </head>
 
@@ -158,10 +159,6 @@
                                     </div>
                                 </ul>
                             </div>
-
-
-
-
                         </a>
 
 
@@ -240,12 +237,6 @@
                             </ul>
                         </div>
 
-
-
-
-
-
-
                     </div>
                 </div>
             </div>
@@ -276,28 +267,31 @@
                     <!-- <a class="nav-link" href="#">Dropdown</a> -->
 
                     <div class="dropdown">
-                        <button class="dropbtn">
-                            Menu 1
-                        </button>
+                        <a class="nav-link">Dropdown<i class=' nav-link  bx bx-chevron-down' ></i></a>
                         <div class="dropdown-content">
-                            <div class="nested-dropdown">
-                                <a href="#">Submenu 1</a>
-                                <div class="nested-dropdown-content">
-                                    <a href="#">Submenu 1.1</a>
-                                    <a href="#">Submenu 1.2</a>
-                                    <a href="#">Submenu 1.3</a>
+                            <a class="nav-link" href="#">dropdown 1</a>
+                            <a class="nav-link" href="#">dropdown 2</a>
+
+                            <!-- submenu -->
+                            <div class="submenu">
+                                <a class="nav-link" href="#">submenu<i class=' nav-link bx bx-chevron-down' ></i></a>
+                                <div class="submenu-content">
+                                    <a class="nav-link" href="#">Dropdown1</a>
+                                    <a class="nav-link" href="#">Dropdown2</a>
+                                    <a class="nav-link" href="#">Dropdown4</a>
+                                    <a class="nav-link" href="#">dropdown 5</a>
+
                                 </div>
                             </div>
-                            <div class="nested-dropdown">
-                                <a href="#">Submenu 2</a>
-                                <div class="nested-dropdown-content">
-                                    <a href="#">Submenu 2.1</a>
-                                    <a href="#">Submenu 2.2</a>
-                                    <a href="#">Submenu 2.3</a>
-                                </div>
-                            </div>
+                               <!-- add hover on icon separately -->
+
+                            <a class="nav-link" href="#">dropdown 3</a>
+                            <a class="nav-link" href="#">dropdown 4</a>
+                            <a class="nav-link" href="#">dropdown 5</a>
+
                         </div>
                     </div>
+
 
 
 
@@ -359,7 +353,9 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
+                            <!-- shoe -->
                             <img src="shoe.webp" class="d-block w-25" alt="shoe">
+                            
                         </div>
                         <div class="carousel-item">
                             <img src="bag.webp" class="d-block w-25" alt="...">
