--- a/FashinstoreClone/FstoreTemplate.html
+++ b/FashinstoreClone/FstoreTemplate.html
@@ -7,10 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- quicksand font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="Fstorestyle.css">
 
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
     <title>FashioStore Clone</title>
 
     <style>
@@ -20,6 +26,7 @@
         /* 18jun/ */
         /* 19/06..submenu */
         /* 20/06..badges and pills */
+        /* 21/06...promocard hover */
     </style>
 </head>
 
@@ -371,97 +378,83 @@
     </section>
 
     <!-- promo cards -->
-
-    <section class="promo-container">
-        <div class="promocardMain container-fluid">
-            <!-- <div class="promocardMain-container "> -->
-            <div class="row g-4">
-                <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="promocard-container">
-                        <div class="promo-card" style="background-color: #f5f2ee;">
-                            <div class="promocontent p-5">
-                                <h5 class="card-title text-muted">Etiam vel augue</h5>
-                                <h4 class="card-title fw-bolder">Nullam quis ante</h4>
-                                <p class="card-text text-muted py-3">Donec pede justo, fringilla vel, aliquet nec,
-                                    vulputate eget,
-                                    arcu
-                                    in enim justo rhoncus ut.</p>
-                                <a href="#" class="btn ">Shop Now</a>
-                                <div class="side-img"><img src="purse.webp" width="120px" height="120px"
-                                        class="img-fluid">
-                                    </div>
-                            </div>
-
-
-                        </div>
+ <!-- Done -->
+    <div class="p-list-container overflow-hidden ">
+        <div class="row gx-2 gy-4">
+            <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center promo-main ">
+                <!-- card 1 -->
+                <div class="p-4 promoM-card" style="  background-color: #f5f2ee;">
+                    <h6 class="card-title text-muted pt-2">Etiam vel augue</h6>
+                    <h4 class="card-title fw-bolder">Nullam quis ante
+                    </h4>
+                    <p class="card-text text-muted py-3">Donec pede justo, fringilla vel, aliquet nec,
+                        vulputate eget,
+                        arcu
+                        in enim justo rhoncus ut.</p>
+                    <a href="#" class="btn ">Shop Now</a>
+                    <div class="side-img">
+                        <img src="purse.webp" style="width: 120px; height: 120px; left: 6.4rem; bottom: 3.25rem;"
+                            class="img-fluid position-relative">
                     </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="promocard-container">
-                        <div class="promo-card" style="background-color: #faf4ea;">
-                            <div class="promocontent p-5">
-                                <h5 class="card-title text-muted">Maecenas tempus</h5>
-                                <h4 class="card-title fw-bold">Sed fringilla mauris</h4>
-                                <p class="card-text text-muted py-3">Donec pede justo, fringilla vel, aliquet nec,
-                                    vulputate eget,
-                                    arcu
-                                    in enim justo rhoncus ut.</p>
-                                <a href="#" class="btn ">Shop Now</a>
-                                <div class="side-img"><img src="chair.webp" width="120px" height="120px"
-                                        class="img-fluid"></div>
-                            </div>
 
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="promocard-container">
-                        <div class="promo-card" style="background-color: #f0f5f0;">
-                            <div class="promocontent p-5">
-                                <h5 class="card-title text-muted">Aenean commodo</h5>
-                                <h4 class="card-title fw-bold">Aenean commodo</h4>
-                                <p class="card-text text-muted py-3">Donec pede justo, fringilla vel, aliquet nec,
-                                    vulputate eget,
-                                    arcu
-                                    in enim justo rhoncus ut.</p>
-                                <a href="#" class="btn ">Shop Now</a>
-                                <div class="side-img"><img src="product-f-1.webp" width="120px" height="120px"
-                                        class="img-fluid">
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3 h-75">
-                    <div class="promocard-container">
-                        <div class="promo-card" style="background-color: #faf4ea;">
-                            <div class="promocontent p-5">
-                                <h5 class="card-title text-muted">Pellentesque auctor</h5>
-                                <h4 class="card-title fw-bold ">Vestibulum dapibus nunc</h4>
-                                <p class="card-text text-muted py-3">Donec pede justo, fringilla vel, aliquet nec,
-                                    vulputate eget,
-                                    arcu
-                                    in enim justo rhoncus ut.</p>
-                                <a href="#" class="btn ">Shop Now</a>
-                                <div class="side-img">
-                                    <img src="product-m-1.webp" width="120px" height="120px" class="img-fluid">
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
                 </div>
 
             </div>
-        </div>
+            <!-- card 2 -->
+            <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center promo-main">
+                <div class="p-3 promoM-card" style="  background-color: #faf4ea;">
+                    <h6 class="card-title text-muted pt-2">Maecenas tempus</h6>
+                    <h4 class="card-title fw-bold">Sed fringilla mauris</h4>
+                    <p class="card-text text-muted py-3">Donec pede justo, fringilla vel, aliquet nec,
+                        vulputate eget,
+                        arcu
+                        in enim justo rhoncus ut.</p>
+                    <a href="#" class="btn ">Shop Now</a>
+                    <div class="side-img">
+                        <img src="chair.webp" style="width: 120px; height: 120px; left: 7.4rem; bottom: 3.25rem;"
+                            class="img-fluid position-relative">
+                    </div>
+                </div>
+
+
+            </div>
+            <!-- card 3 -->
+            <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center promo-main">
+                <div class="p-3 promoM-card" style="  background-color: #f0f5f0;">
+                    <h6 class="card-title text-muted pt-2">Aenean commodo</h6>
+                    <h4 class="card-title fw-bold">Aenean commodo</h4>
+                    <p class="card-text text-muted py-3" style="font-family: quicksand;">Donec pede justo, fringilla
+                        vel, aliquet nec,
+                        vulputate eget,
+                        arcu
+                        in enim justo rhoncus ut.</p>
+                    <a href="#" class="btn ">Shop Now</a>
+                    <div class="side-img"><img src="product-f-1.webp"
+                            style="width: 120px; height: 120px; left: 7.4rem; bottom: 4.2rem;"
+                            class="img-fluid position-relative">
+                    </div>
+                </div>
+            </div>
+            <!-- card 4 -->
+            <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center promo-main">
+                <div class="p-3 promoM-card" style="  background-color: #faf4ea;">
+                    <h6 class="card-title text-muted pt-2">Pellentesque auctor</h6>
+                    <h4 class="card-title fw-bold ">Vestibulum dapibus nunc</h4>
+                    <p class="card-text text-muted py-3">Donec pede justo, fringilla vel, aliquet nec,
+                        vulputate eget,
+                        arcu
+                        in enim justo rhoncus ut.</p>
+                    <a href="#" class="btn ">Shop Now</a>
+                    <div class="side-img">
+                        <img src="product-m-1.webp" style="width: 120px; height: 120px; left: 6rem; bottom:2.8rem;"
+                            class="img-fluid position-relative">
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-    </section>
-
+    </div>
     <!-- category-card -->
     <div class="main-category">
         <div class="container-fluid">
@@ -563,6 +556,7 @@
     </div>
 
     <!-- Best Sellers -->
+    
     <div class="seller-main pt-3 pb-3 p-5" id="Bestsellers">
         <div>
             <h1 class="justify-self-center"><b>Best Sellers</b></h1>
